--- a/src/app/components/productos/index-producto/index-producto.component.html
+++ b/src/app/components/productos/index-producto/index-producto.component.html
@@ -126,7 +126,6 @@
                 <tr>
                   <th>Producto</th>
                   <th>P. </th>
-                  <th>p. dolares</th>
                   <th>Stock</th>
                   <th>Opciones</th>
                 </tr>
@@ -158,9 +157,7 @@
 
                   </td>
                   <td>
-                    {{item.precio|currency:'PEN'}}
-                  <td>
-                    {{item.precioAntesDolares|currency:'USD'}}
+                    {{item.precio|currency:'GS'}}
                   </td>
                   <td>
                     {{item.stock}}
