--- a/src/app/components/ventas/index-ventas/index-ventas.component.html
+++ b/src/app/components/ventas/index-ventas/index-ventas.component.html
@@ -98,7 +98,7 @@
                     <small class="text-muted"> {{item.id}} </small>
                   </td>
                   <td>
-                    <span *ngIf="item.currency == 'PEN'">{{item.total_pagar|currency:'PEN'}}</span>
+                    <span *ngIf="item.currency == 'GS'">{{item.total_pagar|currency:'GS'}}</span>
                     <span *ngIf="item.currency == 'USD'">{{item.total_pagar|currency:'USD'}}</span>
                   </td>
                   <td>
