--- a/src/app/components/ventas/show-ventas/show-ventas.component.html
+++ b/src/app/components/ventas/show-ventas/show-ventas.component.html
@@ -83,7 +83,7 @@
                           <th class="border-0 py-2 pl-0">Precio envio:</th>
                           <td class="border-0 py-2 px-0 text-muted">
                             <span *ngIf="venta.currency == 'USD'">{{venta.envio_precio|currency:'USD'}}</span>
-                            <span *ngIf="venta.currency == 'PEN'">{{venta.envio_precio|currency:'PEN'}}</span>
+                            <span *ngIf="venta.currency == 'GS'">{{venta.envio_precio|currency:'GS'}}</span>
                           </td>
                         </tr>
                         <tr>
@@ -102,7 +102,7 @@
                           <th class="border-0 py-2 pl-0">Descuento:</th>
                           <td class="border-0 py-2 px-0 text-muted">
                             <span *ngIf="venta.currency == 'USD'">{{venta.valor_descuento|currency:'USD'}}</span>
-                            <span *ngIf="venta.currency == 'PEN'">{{venta.valor_descuento|currency:'PEN'}}</span>
+                            <span *ngIf="venta.currency == 'GS'">{{venta.valor_descuento|currency:'GS'}}</span>
                           </td>
                         </tr>
                       </tbody>
@@ -339,7 +339,7 @@
                           <div class="py-2">
                             <div class="font-size-xs text-muted mb-1">Precio:</div>
                             <div class="font-size-sm text-dark">
-                              <span *ngIf="venta.currency == 'PEN'">S/{{item.subtotal}}</span>
+                              <span *ngIf="venta.currency == 'GS'">S/{{item.subtotal}}</span>
                               <span *ngIf="venta.currency == 'USD'">${{item.subtotal}}</span>
 
                             </div>
@@ -355,7 +355,7 @@
                           <div class="py-2 pr-3 text-right">
                             <div class="font-size-xs text-muted mb-1">Subtotal:</div>
                             <div class="font-size-sm font-weight-bold text-dark">
-                              <span *ngIf="venta.currency == 'PEN'">S/{{item.subtotal*item.cantidad}}</span>
+                              <span *ngIf="venta.currency == 'GS'">S/{{item.subtotal*item.cantidad}}</span>
                               <span *ngIf="venta.currency == 'USD'">${{item.subtotal*item.cantidad}}</span>
                             </div>
                           </div>
@@ -367,7 +367,7 @@
                         </td>
                         <td class="" colspan="1">
                           <div class="py-2 pr-3 text-right">
-                            <span *ngIf="venta.currency == 'PEN'">S/{{venta.subtotal}}</span>
+                            <span *ngIf="venta.currency == 'GS'">S/{{venta.subtotal}}</span>
                             <span *ngIf="venta.currency == 'USD'">${{venta.subtotal}}</span>
                           </div>
                         </td>
@@ -378,7 +378,7 @@
                         </td>
                         <td class="" colspan="1">
                           <div class="py-2 pr-3 text-right">
-                            <span *ngIf="venta.currency == 'PEN'">- S/{{venta.valor_descuento}}</span>
+                            <span *ngIf="venta.currency == 'GS'">- S/{{venta.valor_descuento}}</span>
                             <span *ngIf="venta.currency == 'USD'">- ${{venta.valor_descuento}}</span>
                           </div>
                         </td>
@@ -389,7 +389,7 @@
                         </td>
                         <td class="" colspan="1">
                           <div class="py-2 pr-3 text-right">
-                            <span *ngIf="venta.currency == 'PEN'">S/{{venta.envio_precio}}</span>
+                            <span *ngIf="venta.currency == 'GS'">S/{{venta.envio_precio}}</span>
                             <span *ngIf="venta.currency == 'USD'">${{venta.envio_precio}}</span>
                           </div>
                         </td>
@@ -400,7 +400,7 @@
                         </td>
                         <td class="" colspan="1">
                           <div class="py-2 pr-3 text-right">
-                            <span *ngIf="venta.currency == 'PEN'">S/{{venta.total_pagar}}</span>
+                            <span *ngIf="venta.currency == 'GS'">S/{{venta.total_pagar}}</span>
                             <span *ngIf="venta.currency == 'USD'">${{venta.total_pagar}}</span>
                           </div>
                         </td>
